--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <title>Poker Probability Calculator</title>
   </head>
   <body>
+    <div class="mobile-warning">
+      This web app is only available for computer sized screens.
+  </div>
     <div id="root"></div>
   </body>
 </html>
