Added picture to mobile warning sign

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="mobile-warning">
-      This web app is only available for computer sized screens.
+      <img class="logo" src="./logo.png" alt="logo">
+      <div class="warning-text">This web app is only available for computer sized screens.</div>
   </div>
     <div id="root"></div>
   </body>
