--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="mobile-warning">
       <img class="logo" src="./logo.png" alt="logo">
-      <div class="warning-text">This web app is only available for computer sized screens.</div>
+      <div class="warning-text">This app is only available for computer sized screens</div>
   </div>
     <div id="root"></div>
   </body>
