--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#fff">
+    <meta name="theme-color" content="black">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>Poker Probability Calculator</title>
